--- a/index.html
+++ b/index.html
@@ -5,80 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Page title (what shows in the browser tab) -->
+    <!-- Page title -->
     <title>MyRecipePlanner</title>
 
-    <!-- Bootstrap CSS via CDN (no download needed) -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Link to your own stylesheet for any custom styles -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #fff7f2;"> <!-- Light background for a cozy feel -->
+<body style="background-color: #fff7f2;">
 
-    <!-- Navigation bar (top header) -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-light bg-light shadow-sm mb-4">
-        <div class="container">
+        <div class="container d-flex justify-content-between">
             <a class="navbar-brand fw-bold" href="#">MyRecipePlanner 🍽️</a>
+            <a href="add.html" class="btn btn-primary">+ Add Recipe</a>
         </div>
     </nav>
 
-    <!-- Page heading -->
-    <div class="container text-center mb-4">
+    <!-- Page Heading -->
+    <div class="container text-center mb-3">
         <h1 class="display-5">Explore Delicious Recipes</h1>
         <p class="lead text-muted">Filter, favorite, and plan your perfect meal</p>
     </div>
 
-    <!-- Recipe Card Grid Layout -->
+    <!-- Search Bar -->
+    <div class="container mb-4" style="max-width: 500px;">
+        <input type="text" id="searchInput" class="form-control" placeholder="Search recipes...">
+    </div>
+
+    <!-- Dynamic Recipe Card Container -->
     <div class="container">
-        <div class="row justify-content-center">
-
-            <!-- Recipe Card 1 -->
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm h-100">
-                    <!-- Image at the top of the card -->
-                    <img src="images/recipe1.jpg" class="card-img-top" alt="Recipe 1">
-                    
-                    <!-- Card body: title, text, and button -->
-                    <div class="card-body">
-                        <h5 class="card-title">Spaghetti Carbonara</h5>
-                        <p class="card-text">A creamy, cheesy Italian favorite with crispy bacon and black pepper.</p>
-                        <button class="btn btn-outline-danger w-100">❤️ Add to Favorites</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Recipe Card 2 -->
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm h-100">
-                    <img src="images/recipe2.jpg" class="card-img-top" alt="Recipe 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Avocado Toast</h5>
-                        <p class="card-text">Simple, fresh, and healthy. Add toppings like eggs or feta for extra flavor.</p>
-                        <button class="btn btn-outline-danger w-100">❤️ Add to Favorites</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Recipe Card 3 -->
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-sm h-100">
-                    <img src="images/recipe3.jpg" class="card-img-top" alt="Recipe 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Chicken Stir Fry</h5>
-                        <p class="card-text">Colorful vegetables and juicy chicken tossed in a savory soy sauce glaze.</p>
-                        <button class="btn btn-outline-danger w-100">❤️ Add to Favorites</button>
-                    </div>
-                </div>
-            </div>
-
+        <div class="row justify-content-center" id="recipeContainer">
+            <!-- Recipe cards will be injected here via JavaScript -->
         </div>
     </div>
 
-    <!-- Optional JavaScript (Bootstrap bundle includes dropdowns, modals, etc.) -->
+    <!-- Bootstrap JS + Custom Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <!-- Link to your custom script file (optional for interactivity) -->
     <script src="script.js"></script>
 </body>
 </html>
+
