Ensured delete button is injected in view page

--- a/view.html
+++ b/view.html
@@ -18,7 +18,7 @@
 
   <!-- Recipe Content -->
   <div class="container" id="recipeView">
-    <!-- Recipe info will be injected here via JS -->
+    <!-- Content injected by script.js -->
   </div>
 
   <!-- Bootstrap JS + Custom Script -->
